Implement complete password reset flow with email and phone OTP verification

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -203,7 +203,7 @@
         </div>
 
         <p class="subtitle">
-            Enter your email address and we'll send you a reset link. Works for any registered email address.
+            Enter your email address and we'll send you a verification code. Works for any registered email address.
         </p>
 
         <div id="message" class="message"></div>
@@ -225,7 +225,7 @@
             </div>
 
             <button type="submit" class="submit-btn" id="submitBtn">
-                <span id="btnText">Send Reset Link</span>
+                <span id="btnText">Send Verification Code</span>
                 <div class="spinner" id="spinner"></div>
             </button>
         </form>
@@ -240,7 +240,7 @@
     <script>
         const API_URL = window.location.hostname === 'localhost'
             ? 'http://localhost:5003'
-            : 'https://zimcrowd-backend-i8tjcuzr3-jojola.vercel.app';
+            : 'https://zimcrowd-backend-pfzb6c7x3-jojola.vercel.app';
 
         const form = document.getElementById('forgotPasswordForm');
         const emailInput = document.getElementById('email');
@@ -295,7 +295,7 @@
 
                 if (data.success) {
                     showMessage(
-                        `✅ Reset link sent! Check your email (${email}) and click the link to reset your password.`,
+                        `✅ OTP sent! Check your email (${email}) and enter the code to reset your password.`,
                         'success'
                     );
 
@@ -305,21 +305,26 @@
                     // Disable form temporarily to prevent spam
                     setTimeout(() => {
                         submitBtn.disabled = false;
-                        btnText.textContent = 'Send Reset Link';
+                        btnText.textContent = 'Send Verification Code';
                         spinner.style.display = 'none';
                     }, 30000); // 30 seconds cooldown
 
+                    // Redirect to OTP verification page
+                    setTimeout(() => {
+                        window.location.href = `verify-otp.html?email=${encodeURIComponent(email)}&type=reset`;
+                    }, 3000);
+
                 } else {
-                    showMessage(data.message || 'Failed to send reset link. Please check if this email is registered.', 'error');
+                    showMessage(data.message || 'Failed to send verification code. Please check if this email is registered.', 'error');
                     submitBtn.disabled = false;
-                    btnText.textContent = 'Send Reset Link';
+                    btnText.textContent = 'Send Verification Code';
                     spinner.style.display = 'none';
                 }
             } catch (error) {
                 console.error('Forgot password error:', error);
                 showMessage('Network error. Please check your connection and try again.', 'error');
                 submitBtn.disabled = false;
-                btnText.textContent = 'Send Reset Link';
+                btnText.textContent = 'Send Verification Code';
                 spinner.style.display = 'none';
             }
         });
