--- a/reset-password.html
+++ b/reset-password.html
@@ -328,9 +328,11 @@
             const newPassword = newPasswordInput.value;
             const confirmPassword = confirmPasswordInput.value;
 
-            // Get token from URL
+            // Get parameters from URL
             const urlParams = new URLSearchParams(window.location.search);
             const resetToken = urlParams.get('token');
+            const resetType = urlParams.get('type'); // 'email' or 'phone'
+            const identifier = urlParams.get('identifier'); // email or phone number
 
             if (!resetToken) {
                 alert('Invalid reset link. Please request a new password reset.');
@@ -357,17 +359,39 @@
                 // Make API call to backend (auto-detect environment)
                 const API_URL = window.location.hostname === 'localhost' 
                     ? 'http://localhost:5003'
-                    : 'https://zimcrowd-backend-qsvfl2nqu-jojola.vercel.app';
+                    : 'https://zimcrowd-backend-pfzb6c7x3-jojola.vercel.app';
                 
-                const response = await fetch(`${API_URL}/api/auth/reset-password`, {
+                // Choose the correct endpoint based on reset type
+                let endpoint, requestBody;
+                if (resetType === 'email') {
+                    endpoint = `${API_URL}/api/email-auth/reset-password-email`;
+                    requestBody = {
+                        email: identifier,
+                        otp: resetToken,
+                        newPassword: newPassword
+                    };
+                } else if (resetType === 'phone') {
+                    endpoint = `${API_URL}/api/phone-auth/reset-password-phone`;
+                    requestBody = {
+                        phone: identifier,
+                        otp: resetToken,
+                        newPassword: newPassword
+                    };
+                } else {
+                    // Fallback to general endpoint
+                    endpoint = `${API_URL}/api/auth/reset-password`;
+                    requestBody = {
+                        resetToken: resetToken,
+                        newPassword: newPassword
+                    };
+                }
+                
+                const response = await fetch(endpoint, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({
-                        resetToken: resetToken,
-                        newPassword: newPassword
-                    })
+                    body: JSON.stringify(requestBody)
                 });
 
                 const data = await response.json();
