--- a/login.html
+++ b/login.html
@@ -68,6 +68,18 @@
             position: relative;
             z-index: 1;
             text-align: center;
+            animation: loginCardEntrance 0.8s cubic-bezier(0.16, 1, 0.3, 1);
+        }
+
+        @keyframes loginCardEntrance {
+            0% {
+                opacity: 0;
+                transform: translateY(30px) scale(0.95);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0) scale(1);
+            }
         }
 
         .login-header {
@@ -142,6 +154,7 @@
             background: rgba(255, 255, 255, 0.12);
             box-shadow: 
                 0 0 0 3px rgba(56, 224, 123, 0.15),
+                0 0 20px rgba(56, 224, 123, 0.1),
                 0 4px 12px rgba(0, 0, 0, 0.1),
                 inset 0 1px 0 rgba(255, 255, 255, 0.1);
             transform: translateY(-1px);
@@ -234,6 +247,12 @@
             opacity: 0.6;
             cursor: not-allowed;
             transform: none;
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0%, 100% { opacity: 0.6; }
+            50% { opacity: 0.8; }
         }
 
         .divider {
