Update forgot password page to support both email and phone OTP verification with auto-detection

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -203,24 +203,24 @@
         </div>
 
         <p class="subtitle">
-            Enter your email address and we'll send you a verification code. Works for any registered email address.
+            Enter your email address or phone number and we'll send you a verification code. Works for any registered account.
         </p>
 
         <div id="message" class="message"></div>
 
         <form id="forgotPasswordForm">
             <div class="form-group">
-                <label for="email" class="form-label">
-                    <i class="fas fa-envelope"></i> Email Address
+                <label for="contact" class="form-label">
+                    <i class="fas fa-user"></i> Email or Phone Number
                 </label>
                 <input
-                    type="email"
-                    id="email"
-                    name="email"
+                    type="text"
+                    id="contact"
+                    name="contact"
                     class="form-input"
-                    placeholder="Enter any registered email address"
+                    placeholder="Enter your email or phone number"
                     required
-                    autocomplete="email"
+                    autocomplete="username"
                 >
             </div>
 
@@ -243,7 +243,7 @@
             : 'https://zimcrowd-backend-pfzb6c7x3-jojola.vercel.app';
 
         const form = document.getElementById('forgotPasswordForm');
-        const emailInput = document.getElementById('email');
+        const contactInput = document.getElementById('contact');
         const submitBtn = document.getElementById('submitBtn');
         const btnText = document.getElementById('btnText');
         const spinner = document.getElementById('spinner');
@@ -259,48 +259,91 @@
             messageDiv.style.display = 'none';
         }
 
+        // Function to detect if input is email or phone
+        function detectContactMethod(value) {
+            if (!value) return 'unknown';
+
+            // Clean the value for better detection
+            const cleanValue = value.trim();
+
+            // Check if it's an email (contains @ and looks like email)
+            const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            if (emailRegex.test(cleanValue)) {
+                return 'email';
+            }
+
+            // Check if it's a phone number (starts with + or contains only digits/spaces/hyphens/parens)
+            const phoneRegex = /^[\+]?[0-9\s\-\(\)]+$/;
+            if (phoneRegex.test(cleanValue)) {
+                // Additional checks for phone numbers
+                const digitsOnly = cleanValue.replace(/\D/g, '');
+                if (digitsOnly.length >= 7 && digitsOnly.length <= 15) {
+                    return 'phone';
+                }
+                // If starts with +, assume it's a phone number
+                if (cleanValue.startsWith('+')) {
+                    return 'phone';
+                }
+            }
+
+            return 'unknown';
+        }
+
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
             hideMessage();
 
-            const email = emailInput.value.trim();
+            const contact = contactInput.value.trim();
 
-            if (!email) {
-                showMessage('Please enter your email address', 'error');
+            if (!contact) {
+                showMessage('Please enter your email address or phone number', 'error');
                 return;
             }
 
-            // Basic email validation
-            const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
-            if (!emailRegex.test(email)) {
-                showMessage('Please enter a valid email address', 'error');
+            // Detect contact method
+            const contactMethod = detectContactMethod(contact);
+            if (contactMethod === 'unknown') {
+                showMessage('Please enter a valid email address or phone number', 'error');
                 return;
             }
 
             // Show loading
             submitBtn.disabled = true;
-            btnText.textContent = 'Sending...';
+            btnText.textContent = contactMethod === 'email' ? 'Sending Email...' : 'Sending SMS...';
             spinner.style.display = 'inline-block';
 
             try {
-                const response = await fetch(`${API_URL}/api/email-auth/forgot-password-email`, {
+                let endpoint, requestBody;
+
+                if (contactMethod === 'email') {
+                    endpoint = `${API_URL}/api/email-auth/forgot-password-email`;
+                    requestBody = { email: contact };
+                } else {
+                    endpoint = `${API_URL}/api/phone-auth/forgot-password-phone`;
+                    requestBody = { phone: contact };
+                }
+
+                const response = await fetch(endpoint, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({ email })
+                    body: JSON.stringify(requestBody)
                 });
 
                 const data = await response.json();
 
                 if (data.success) {
+                    const method = contactMethod === 'email' ? 'email' : 'phone';
+                    const capitalizedMethod = method.charAt(0).toUpperCase() + method.slice(1);
+
                     showMessage(
-                        `✅ OTP sent! Check your email (${email}) and enter the code to reset your password.`,
+                        `✅ OTP sent! Check your ${method} (${contact}) and enter the code to reset your password.`,
                         'success'
                     );
 
                     // Clear the form
-                    emailInput.value = '';
+                    contactInput.value = '';
 
                     // Disable form temporarily to prevent spam
                     setTimeout(() => {
@@ -311,11 +354,11 @@
 
                     // Redirect to OTP verification page
                     setTimeout(() => {
-                        window.location.href = `verify-otp.html?email=${encodeURIComponent(email)}&type=reset`;
+                        window.location.href = `verify-otp.html?${method}=${encodeURIComponent(contact)}&type=reset`;
                     }, 3000);
 
                 } else {
-                    showMessage(data.message || 'Failed to send verification code. Please check if this email is registered.', 'error');
+                    showMessage(data.message || `Failed to send verification code. Please check if this ${contactMethod} is registered.`, 'error');
                     submitBtn.disabled = false;
                     btnText.textContent = 'Send Verification Code';
                     spinner.style.display = 'none';
