Remove icon from forgot password label and simplify to 'Email/Phone'

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -211,7 +211,7 @@
         <form id="forgotPasswordForm">
             <div class="form-group">
                 <label for="contact" class="form-label">
-                    <i class="fas fa-user"></i> Email or Phone Number
+                    Email/Phone
                 </label>
                 <input
                     type="text"
