--- a/signup.html
+++ b/signup.html
@@ -55,19 +55,13 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 0;
-            background: rgba(255, 255, 255, 0.08);
-            backdrop-filter: blur(30px);
-            -webkit-backdrop-filter: blur(30px);
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(20px);
+            -webkit-backdrop-filter: blur(20px);
             border-radius: 24px;
             overflow: hidden;
-            border: 2px solid rgba(239, 68, 68, 0.6);
-            box-shadow:
-                0 0 60px rgba(239, 68, 68, 0.3),
-                0 0 120px rgba(239, 68, 68, 0.2),
-                0 0 180px rgba(239, 68, 68, 0.1),
-                0 25px 50px rgba(239, 68, 68, 0.15),
-                0 0 0 1px rgba(239, 68, 68, 0.4),
-                inset 0 1px 0 rgba(255, 255, 255, 0.15);
+            border: 1px solid rgba(56, 231, 123, 0.3);
+            box-shadow: 0 8px 32px rgba(56, 231, 123, 0.2), 0 20px 60px rgba(0, 0, 0, 0.3);
             position: relative;
             z-index: 1;
             animation: signupCardEntrance 0.8s cubic-bezier(0.16, 1, 0.3, 1);
@@ -77,12 +71,12 @@
             0% {
                 opacity: 0;
                 transform: translateY(30px) scale(0.95);
-                filter: drop-shadow(0 0 0 rgba(239, 68, 68, 0));
+                filter: drop-shadow(0 0 0 rgba(56, 231, 123, 0));
             }
             100% {
                 opacity: 1;
                 transform: translateY(0) scale(1);
-                filter: drop-shadow(0 0 60px rgba(239, 68, 68, 0.3));
+                filter: drop-shadow(0 0 60px rgba(56, 231, 123, 0.3));
             }
         }
 
