Update signup button to use CSS variables for green color consistency

--- a/signup.html
+++ b/signup.html
@@ -317,7 +317,7 @@
         .submit-btn {
             width: 100%;
             padding: 18px 24px;
-            background: linear-gradient(135deg, #38e07b 0%, #22c55e 100%);
+            background: linear-gradient(135deg, var(--color-green) 0%, var(--color-green-dark) 100%);
             border: none;
             border-radius: 12px;
             color: #191A23;
@@ -352,7 +352,7 @@
             box-shadow: 
                 0 12px 40px rgba(56, 224, 123, 0.4),
                 0 0 0 1px rgba(255, 255, 255, 0.1) inset;
-            background: linear-gradient(135deg, #4ade80 0%, #38e07b 100%);
+            background: linear-gradient(135deg, var(--color-green-light) 0%, var(--color-green) 100%);
         }
 
         .submit-btn:disabled {
