--- a/about-us.html
+++ b/about-us.html
@@ -450,10 +450,29 @@
             <div class="footer-column">
                 <h4>Legal</h4>
                 <ul class="footer-links">
-                    <li><a href="#general-loan-terms">General Loan Terms</a></li>
-                    <li><a href="#risk-warnings">Risk Warnings</a></li>
-                    <li><a href="#terms-conditions">Terms & Conditions</a></li>
-                    <li><a href="#privacy-policy">Privacy Policy</a></li>
-                    <li><a href="#cookie-policy">Cookie Policy</a></li>
-                    <li><a href="#terms-of-service">Terms of Service</a></li>
-                    <li><a
+                    <li><a href="general-loan-terms.html">General Loan Terms</a></li>
+                    <li><a href="risk-warnings.html">Risk Warnings</a></li>
+                    <li><a href="terms-conditions.html">Terms & Conditions</a></li>
+                    <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                    <li><a href="cookie-policy.html">Cookie Policy</a></li>
+                    <li><a href="terms-of-service.html">Terms of Service</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="zimcrowd-footer">
+            <div class="footer-content">
+                <div class="footer-bottom">
+                    <div class="footer-copyright">
+                        <p>&copy; 2024 ZimCrowd. All rights reserved.</p>
+                    </div>
+                    <div class="footer-social">
+                        <a href="#" class="social-link"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#" class="social-link"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
