--- a/verify-otp.html
+++ b/verify-otp.html
@@ -629,21 +629,43 @@
             const timerDisplay = document.getElementById('timer');
             const userEmailDisplay = document.getElementById('userEmail');
 
-            // Get contact info from URL params or localStorage (supports both email and phone)
+            // Get contact info from URL params first, then localStorage (URL params take priority)
             const urlParams = new URLSearchParams(window.location.search);
-            const email = urlParams.get('email') || localStorage.getItem('verificationEmail');
-            const phone = urlParams.get('phone') || localStorage.getItem('verificationPhone');
-            
+            const emailFromUrl = urlParams.get('email');
+            const phoneFromUrl = urlParams.get('phone');
+            const emailFromStorage = localStorage.getItem('verificationEmail');
+            const phoneFromStorage = localStorage.getItem('verificationPhone');
+
+            // Prioritize URL parameters over localStorage
+            const email = emailFromUrl || emailFromStorage;
+            const phone = phoneFromUrl || phoneFromStorage;
+
             // Determine contact type and value
             let contactValue, contactType, contactDisplay;
-            if (email) {
+            if (email && (!phone || emailFromUrl)) {
                 contactValue = email;
                 contactType = 'email';
                 contactDisplay = email;
-            } else if (phone) {
+            } else if (phone && (!email || phoneFromUrl)) {
                 contactValue = phone;
                 contactType = 'phone';
                 contactDisplay = phone;
+            } else if (email && phone) {
+                // Both exist, prefer the one from URL params
+                if (emailFromUrl) {
+                    contactValue = email;
+                    contactType = 'email';
+                    contactDisplay = email;
+                } else if (phoneFromUrl) {
+                    contactValue = phone;
+                    contactType = 'phone';
+                    contactDisplay = phone;
+                } else {
+                    // Both from localStorage, prefer phone (more recent signup method)
+                    contactValue = phone;
+                    contactType = 'phone';
+                    contactDisplay = phone;
+                }
             } else {
                 contactValue = 'your contact';
                 contactType = 'unknown';
@@ -779,6 +801,11 @@
                     const data = await response.json();
 
                     if (data.success) {
+                        // Clear localStorage verification data
+                        localStorage.removeItem('tempToken');
+                        localStorage.removeItem('verificationEmail');
+                        localStorage.removeItem('verificationPhone');
+
                         if (verificationType === 'reset') {
                             // Password reset - redirect to reset password page with proper parameters
                             const params = new URLSearchParams({
