debug: add logging to set-new-password.html
- Add debug console logs to troubleshoot route issues
- Create test-reset-password.html for route testing
- Help diagnose why reset password route shows 'not found'

--- a/set-new-password.html
+++ b/set-new-password.html
@@ -387,6 +387,12 @@
         const resetToken = localStorage.getItem('resetToken');
         const phone = phoneFromUrl || phoneFromStorage;
 
+        console.log('🔄 Set New Password Page Debug:');
+        console.log('📱 Phone from URL:', phoneFromUrl);
+        console.log('📱 Phone from storage:', phoneFromStorage);
+        console.log('📱 Final phone:', phone);
+        console.log('🔑 Reset token:', resetToken);
+
         if (!phone || !resetToken) {
             // Missing required data, redirect back
             window.location.href = 'forgot-password-sms.html';
@@ -481,6 +487,11 @@
             submitBtn.disabled = true;
 
             try {
+                console.log('🔄 Making reset password request to:', `${API_URL}/api/phone-auth/reset-password-phone`);
+                console.log('📱 Phone:', phone);
+                console.log('🔑 OTP/Reset Token:', resetToken);
+                console.log('🔒 New Password length:', newPassword.length);
+                
                 const response = await fetch(`${API_URL}/api/phone-auth/reset-password-phone`, {
                     method: 'POST',
                     headers: {
@@ -493,7 +504,10 @@
                     })
                 });
 
+                console.log('📤 Response status:', response.status);
+                
                 const data = await response.json();
+                console.log('📤 Response data:', data);
 
                 if (data.success) {
                     showSuccess('✅ Password reset successful! Redirecting to login...');
