Add email OTP delivery for passwordless login

--- a/login-no-inline.html
+++ b/login-no-inline.html
@@ -242,7 +242,10 @@
                 <div class="form-group">
                     <label class="form-label">Enter 6-digit Code</label>
                     <input type="text" class="form-input otp-input" id="otpCode" placeholder="000000" maxlength="6">
-                    <small class="otp-hint">Check server console for your OTP code</small>
+                    <small class="otp-hint">
+                        <i class="fas fa-info-circle"></i>
+                        You'll receive your code via email (preferred), SMS, or check the server console
+                    </small>
                 </div>
 
                 <div class="otp-actions">
